<resources>
    <string name="app_name">profile</string>
    <string name="regist_vcode">验证码快捷登录</string>
    <string name="regist_remind">点击开始代表您已阅读并同意</string>
    <string name="regist_protocol">「用户服务协议」</string>
    <string name="login_wechat">使用微信登录</string>
    <string name="login_phone">手机号登录</string>
    <string name="login_wechat_2">微信登录</string>
    <string name="login_vcode">点此获取</string>

    <string name="profile_motify_remind">查看并编辑个人资料</string>
    <string name="exchange1">长江国际</string>
    <string name="asset_total">总资产(元)</string>
    <string name="asset_balance">可用余额(元)</string>
    <string name="asset_hold">持仓资产(元)</string>
    <string name="asset_coupon">代金券</string>
    <string name="trading_record">交易记录</string>
    <string name="withdraw_record">充值交易记录</string>

    <string name="online_service">在线客服</string>
    <string name="fresh_classroom">新手学堂</string>
    <string name="message_center">消息中心</string>
    <string name="about_us">关于我们</string>
    <string name="set_password">设置交易专用密码</string>
    <string name="set_password_remind">交易专用密码，资金更安全</string>
    <string name="ok">确定</string>


    <string name="hint_set_password">设置6-12位登录密码</string>

    <string name="hint_set_password_repeat">请重复以上密码</string>
    <string name="zhongjin_login">长江国际交易登录</string>
    <string name="zhongjin_login_remind">为保证账号安全，登录交易6小时后需重新登录</string>
    <string name="foget_pass">忘记密码？</string>
    <string name="profile_edit">编辑资料</string>
    <string name="nickname">昵称</string>
    <string name="logout_current">退出当前账号</string>
    <string name="select">选择</string>
    <string name="take_photo">拍照</string>
    <string name="gallery">相册</string>
    <string name="my_vocher">我的代金券</string>
    <string name="auth">实名认证</string>
    <string name="auth_remind">为保障资金安全，交易所实行提现实名认证制度，完成认证即可正常提现（申请人数较多时会延长审核时间，请耐心等待）</string>
    <string name="name">姓名</string>
    <string name="name_hint">请输入您的姓名</string>
    <string name="cid">身份证</string>
    <string name="cid_hint">请输入您的身份证号码</string>
    <string name="auth_remind2">请填写实名认证信息，且实名认证姓名需与提现银行卡户 名一致</string>
    <string name="auth_remind3">蚂蚁投资承诺您的信息安全</string>
    <string name="logout_remind">确定退出该账号？</string>
    <string name="no_vochers">暂无代金券</string>
    <string name="format_voucher_price">限%.0f元/手使用</string>
    <string name="my_vocher_unget">可领代金券</string>
    <string name="vocher_get_succ">领取成功</string>

    <string name="format_auth_state">实名认证（%s）</string>
    <string name="reset_password">重置交易密码</string>
    <string name="account_with_quote">账号：</string>
    <string name="vcode_input">输入验证码</string>
    <string name="unread_num">%d个未读</string>
    <string name="mark_read">标记为已读</string>
    <string name="select_portrait">选择头像</string>
    <string name="save">保存</string>
    <string name="use_it">立即使用</string>
    <string name="bind_phone_remind">绑定手机号领取90元代金券\n0成本下单</string>
    <string name="withdraw_space">提 现</string>
    <string name="recharge_space">充 值</string>
    <string name="nickname_edit_done">昵称修改成功</string>


    <array name="profile_list">
        <item>@string/online_service</item>
        <item>@string/fresh_classroom</item>
        <item>@string/message_center</item>
        <item>@string/about_us</item>
    </array>
</resources>
