<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.zxzx74147.devlib.data.UserData"/>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/default_gap_44"
        android:paddingTop="@dimen/default_gap_80">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="22dp"
            android:text="@string/reset_password"
            android:textColor="@color/text_black"
            android:textSize="@dimen/default_size_40"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap_20"
            android:text="@string/account_with_quote"
            android:textColor="@color/text_light_grey"

            android:textSize="@dimen/default_size_26"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap_20"
            android:text="@{user.phone}"
            android:textColor="@color/text_light_grey"
            android:textSize="@dimen/default_size_26"
            app:layout_constraintLeft_toRightOf="@id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <LinearLayout
            android:id="@+id/vcode_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap_80"
            android:background="@drawable/rect_round_grey"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            android:padding="@dimen/default_gap_24">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/vcode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/tran"
                    android:hint="@string/vcode_input"
                    android:textColorHint="@color/text_light_grey"
                    android:inputType="number"
                    android:maxLength="6"
                    android:textColor="@color/text_black"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/default_size_40" />

                <TextView
                    android:id="@+id/vcode_remind"
                    android:text="@string/login_vcode"
                    android:textSize="@dimen/default_size_26"
                    android:textColor="@color/text_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/password"
            android:layout_width="0dip"
            android:layout_height="@dimen/default_gap_96"
            android:layout_marginTop="@dimen/default_gap_24"
            android:background="@drawable/rect_round_grey"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/hint_set_password"
            android:inputType="numberPassword"
            android:paddingLeft="@dimen/default_gap_24"
            android:paddingRight="@dimen/default_gap_24"
            android:textColorHint="@color/text_light_grey"
            android:textSize="@dimen/default_size_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vcode_layout" />

        <CheckBox
            android:id="@+id/check_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_password_show"
            android:paddingLeft="@dimen/default_gap_15"
            android:paddingRight="@dimen/default_gap_15"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintTop_toTopOf="@+id/password" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="0dip"
            android:layout_height="@dimen/default_gap_96"
            android:layout_marginTop="@dimen/default_gap_24"
            android:background="@drawable/rect_round_grey"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/hint_set_password_repeat"
            android:inputType="numberPassword"
            android:paddingLeft="@dimen/default_gap_24"
            android:paddingRight="@dimen/default_gap_24"
            android:textColorHint="@color/text_light_grey"
            android:textSize="@dimen/default_size_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <CheckBox
            android:id="@+id/check_password2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_password_show"
            android:paddingLeft="@dimen/default_gap_15"
            android:paddingRight="@dimen/default_gap_15"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@+id/password2"
            app:layout_constraintEnd_toEndOf="@+id/password2"
            app:layout_constraintTop_toTopOf="@+id/password2" />


        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap_50"
            android:background="@drawable/rect_round_gold_stroke"
            android:text="@string/cancel"
            android:textColor="@color/text_gold_white"
            android:textSize="@dimen/default_size_34"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password2"
            tools:layout_editor_absoluteY="129dp" />

        <Button
            android:id="@+id/ok"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_gap_21"
            android:background="@drawable/rect_round_gold"
            android:text="@string/ok"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/cancel" />

        <TextView
            android:id="@+id/error_remind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap_10"
            android:text=""
            android:textColor="@color/text_red"
            android:textSize="@dimen/default_size_26"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password2" />
    </android.support.constraint.ConstraintLayout>
</layout>